infra/manifests/api/service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 8080
    targetPort: 8080
