infra/manifests/api/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: spino-api-static-ip-prod
    networking.gke.io/managed-certificates: api-cert
    spec.ingressClassName: "gce"
spec:
  rules:
  - host: api.spino.kurichi.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
